--- a/DnxBareMinimum/Model/project.json
+++ b/DnxBareMinimum/Model/project.json
@@ -9,7 +9,8 @@
   "frameworks": {
     "dnxcore50": {
       "dependencies": {
-        "System.Console": "4.0.0-beta-23427"
+        "System.Console": "4.0.0-beta-23427",
+        "System.Collections": "4.0.11-beta-23516"
       }
     }
   }
