--- a/DnxBareMinimum/UnitTest/project.json
+++ b/DnxBareMinimum/UnitTest/project.json
@@ -11,17 +11,12 @@
        "Model" : "",
        "xunit.runner.dnx": "2.1.0-rc1-build204",
        "xunit": "2.1.0"
-       
   },
   "commands": {
     "test": "xunit.runner.dnx"
   },
 
   "frameworks" : {
-    "dnxcore50" : {
-      "dependencies": {
-        "Microsoft.CSharp": "4.0.1-beta-23516"
-      }
-    }
+    "dnxcore50" : {}
   }
 }
