--- a/DnxBareMinimum/UnitTest/project.json
+++ b/DnxBareMinimum/UnitTest/project.json
@@ -8,7 +8,7 @@
   
   "dependencies": {
        "ViewModel" : "",
-       "Model" : "",
+       "Dennis.ComposerApp.Model" : "",
        "xunit.runner.dnx": "2.1.0-rc1-build204",
        "xunit": "2.1.0"
   },
