--- a/DnxBareMinimum/UnitTest/project.lock.json
+++ b/DnxBareMinimum/UnitTest/project.lock.json
@@ -3,6 +3,14 @@
   "version": 2,
   "targets": {
     "DNXCore,Version=v5.0": {
+      "Dennis.ComposerApp.Model/1.0.0": {
+        "type": "project",
+        "framework": "DNXCore,Version=v5.0",
+        "dependencies": {
+          "System.Collections": "4.0.11-beta-23516",
+          "System.Console": "4.0.0-beta-23427"
+        }
+      },
       "Microsoft.Dnx.Compilation.Abstractions/1.0.0-rc1-final": {
         "type": "package",
         "dependencies": {
@@ -142,14 +150,6 @@
         },
         "runtime": {
           "lib/dotnet/Microsoft.Win32.Primitives.dll": {}
-        }
-      },
-      "Model/1.0.0": {
-        "type": "project",
-        "framework": "DNXCore,Version=v5.0",
-        "dependencies": {
-          "System.Collections": "4.0.11-beta-23516",
-          "System.Console": "4.0.0-beta-23427"
         }
       },
       "Newtonsoft.Json/7.0.1": {
@@ -738,7 +738,7 @@
         "type": "project",
         "framework": "DNXCore,Version=v5.0",
         "dependencies": {
-          "Model": null,
+          "Dennis.ComposerApp.Model": null,
           "System.ObjectModel": "4.0.11-beta-23516"
         }
       },
@@ -906,6 +906,14 @@
       }
     },
     "DNXCore,Version=v5.0/win7-x86": {
+      "Dennis.ComposerApp.Model/1.0.0": {
+        "type": "project",
+        "framework": "DNXCore,Version=v5.0",
+        "dependencies": {
+          "System.Collections": "4.0.11-beta-23516",
+          "System.Console": "4.0.0-beta-23427"
+        }
+      },
       "Microsoft.Dnx.Compilation.Abstractions/1.0.0-rc1-final": {
         "type": "package",
         "dependencies": {
@@ -1063,14 +1071,6 @@
         },
         "runtime": {
           "lib/DNXCore50/Microsoft.Win32.Registry.dll": {}
-        }
-      },
-      "Model/1.0.0": {
-        "type": "project",
-        "framework": "DNXCore,Version=v5.0",
-        "dependencies": {
-          "System.Collections": "4.0.11-beta-23516",
-          "System.Console": "4.0.0-beta-23427"
         }
       },
       "Newtonsoft.Json/7.0.1": {
@@ -1999,7 +1999,7 @@
         "type": "project",
         "framework": "DNXCore,Version=v5.0",
         "dependencies": {
-          "Model": null,
+          "Dennis.ComposerApp.Model": null,
           "System.ObjectModel": "4.0.11-beta-23516"
         }
       },
@@ -2167,6 +2167,14 @@
       }
     },
     "DNXCore,Version=v5.0/win7-x64": {
+      "Dennis.ComposerApp.Model/1.0.0": {
+        "type": "project",
+        "framework": "DNXCore,Version=v5.0",
+        "dependencies": {
+          "System.Collections": "4.0.11-beta-23516",
+          "System.Console": "4.0.0-beta-23427"
+        }
+      },
       "Microsoft.Dnx.Compilation.Abstractions/1.0.0-rc1-final": {
         "type": "package",
         "dependencies": {
@@ -2324,14 +2332,6 @@
         },
         "runtime": {
           "lib/DNXCore50/Microsoft.Win32.Registry.dll": {}
-        }
-      },
-      "Model/1.0.0": {
-        "type": "project",
-        "framework": "DNXCore,Version=v5.0",
-        "dependencies": {
-          "System.Collections": "4.0.11-beta-23516",
-          "System.Console": "4.0.0-beta-23427"
         }
       },
       "Newtonsoft.Json/7.0.1": {
@@ -3260,7 +3260,7 @@
         "type": "project",
         "framework": "DNXCore,Version=v5.0",
         "dependencies": {
-          "Model": null,
+          "Dennis.ComposerApp.Model": null,
           "System.ObjectModel": "4.0.11-beta-23516"
         }
       },
@@ -3429,9 +3429,9 @@
     }
   },
   "libraries": {
-    "Model/1.0.0": {
+    "Dennis.ComposerApp.Model/1.0.0": {
       "type": "project",
-      "path": "../Model/project.json"
+      "path": "../Dennis.ComposerApp.Model/project.json"
     },
     "ViewModel/1.0.0": {
       "type": "project",
@@ -6064,7 +6064,7 @@
   "projectFileDependencyGroups": {
     "": [
       "ViewModel ",
-      "Model ",
+      "Dennis.ComposerApp.Model ",
       "xunit.runner.dnx >= 2.1.0-rc1-build204",
       "xunit >= 2.1.0"
     ],
