--- a/DnxBareMinimum/ViewModel/project.json
+++ b/DnxBareMinimum/ViewModel/project.json
@@ -10,7 +10,7 @@
   "projectUrl": "",
   "licenseUrl": "",
   "dependencies": {
-    "Model": ""
+    "Dennis.ComposerApp.Model": ""
   },
   "frameworks": {
     "dnxcore50": {
